Refactor tail risk analysis to use DailyPriceProvider for price data and remove deprecated findDailyChangePercents method